prover-ray/zkcdriver/testdata/synced/invalid/while_02.zkc
//error:4:15-16:braces required
fn f(x:u8) -> (r:u8) {
  r = 0
  while x + x * x == 0 {
    r = 1
  }
  return
}
